Fix spacing for directories

--- a/app/assets/stylesheets/spiralNote/modules/_treeView.sass
+++ b/app/assets/stylesheets/spiralNote/modules/_treeView.sass
@@ -27,3 +27,4 @@
     font-size: 13px
   h3
     margin: 0
+    line-height: 17px
